<resources>
    <string name="app_name">Labsheet 03</string>
    <string name="enter_number_1">Enter Number 1</string>
    <string name="enter_number_2">Enter Number 2</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="answer">Answer: 0.0</string>
    <string name="btnBack">Back</string>
</resources>