<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_number_1"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_number_2"
        android:inputType="numberDecimal"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSub"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:text="@string/subtract"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnMul"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:text="@string/multiply"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnDiv"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:text="@string/divide"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>